--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "ansi-art",
   "version": "1.0.0",
   "description": "create ansi art using simple texts",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack -p",
+    "watch": "webpack --watch --progress",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/gauravchl/ansi-art/issues"
   },
-  "homepage": "https://github.com/gauravchl/ansi-art#readme"
+  "homepage": "https://github.com/gauravchl/ansi-art#readme",
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "webpack": "^2.4.1"
+  }
 }
