--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
+    "file-loader": "^0.11.1",
     "webpack": "^2.4.1"
   }
 }
