--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
   "name": "ansi-art",
   "version": "1.2.1",
+  "author": "gaurav chikhale",
+  "license": "MIT",
   "description": "create ansi art using simple texts",
   "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p",
-    "watch": "webpack --watch --progress",
-    "prepublish": "npm run build"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gauravchl/ansi-art.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gauravchl/ansi-art/issues"
   },
   "keywords": [
     "ansi",
     "art"
   ],
-  "author": "gaurav chikhale",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gauravchl/ansi-art/issues"
-  },
   "homepage": "https://github.com/gauravchl/ansi-art#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
-    "babel-preset-es2015": "^6.24.1",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "15.0.2",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
     "file-loader": "^0.11.1",
     "webpack": "^2.4.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack -p",
+    "watch": "webpack --watch --progress",
+    "prepublish": "npm run build"
   }
 }
