--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   ],
   "homepage": "https://github.com/gauravchl/ansi-art#readme",
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-core": "6.25.0",
+    "babel-loader": "7.0.0",
+    "babel-preset-env": "1.4.0",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "15.0.2",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
-    "file-loader": "^0.11.1",
-    "webpack": "^2.4.1"
+    "file-loader": "0.11.1",
+    "webpack": "3.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
