--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
     "file-loader": "0.11.1",
+    "stylelint": "8.0.0",
+    "stylelint-config-standard": "17.0.0",
     "webpack": "3.4.0"
   },
   "scripts": {
