--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
-  "extends": "airbnb",
+  "extends": "airbnb-base",
+  "plugins": ["import"],
   "env": {
+    "node": true,
     "browser": true,
-    "node": true
+    "es6": true
   }
 }
